z-index fix

--- a/mn1.css
+++ b/mn1.css
@@ -1,4 +1,8 @@
 /* -- Global styling -- */
+div#coo-table-info {
+    z-index: -1;
+    position: relative;
+}
 .modal-content {
     min-width: 800px;
 }
